syntax = "proto3";
package etrs.proto;

// DetectionResult
message DetectionResult{
    repeated Object objects = 1;
}

message Object {
    string label = 1;
    BoundingBox bbox = 2;
    float score = 3;
}

message BoundingBox {
    // 坐标
    float x = 1;
    float y = 2;
    float z = 3;
    // 长宽高
    float l = 4;
    float w = 5;
    float h = 6;
    // 旋转角度
    float yaw = 7;
}
